--- a/app/src/main/res/layout/activity_banner_galery.xml
+++ b/app/src/main/res/layout/activity_banner_galery.xml
@@ -7,6 +7,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/viewPager" />
+
     <TextView
         android:id="@+id/errorTextView"
         android:layout_width="wrap_content"
