--- a/app/src/main/res/layout/fragment_galeri.xml
+++ b/app/src/main/res/layout/fragment_galeri.xml
@@ -1,20 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
+    <!-- TextView for displaying error messages -->
     <TextView
         android:id="@+id/errorTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FF0000"
-        android:visibility="gone"
-        android:text="Error message" />
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="gone" /> <!-- Initially hidden -->
 
+    <!-- RecyclerView to display banner items -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
 </LinearLayout>
