--- a/app/src/main/res/layout/item_slider_banner.xml
+++ b/app/src/main/res/layout/item_slider_banner.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:orientation="vertical">
+    android:layout_gravity="center"
+    android:layout_marginHorizontal="16dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp">
 
     <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/imageViewBanner"
+        android:id="@+id/imageViewSlider"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:scaleType="centerCrop" />
 </androidx.cardview.widget.CardView>
