--- a/app/src/main/res/layout/activity_image_slider.xml
+++ b/app/src/main/res/layout/activity_image_slider.xml
@@ -1,26 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- activity_image_slider.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabIndicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:clipToPadding="false"
-        android:clipChildren="false"
-        android:layout_marginTop="16dp" />
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabIndicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        app:tabIndicatorColor="@color/purple_200"
-        app:tabSelectedTextColor="@color/purple_200"/>
+        android:layout_weight="1" />
 </LinearLayout>
