--- a/app/src/main/res/layout/item_slider_banner.xml
+++ b/app/src/main/res/layout/item_slider_banner.xml
@@ -1,17 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:layout_gravity="center"
-    android:layout_marginHorizontal="16dp"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="8dp">
+    android:layout_height="wrap_content">
 
-    <com.android.volley.toolbox.NetworkImageView
+    <ImageView
         android:id="@+id/imageViewSlider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop" />
-</androidx.cardview.widget.CardView>
+</FrameLayout>
