--- a/app/src/main/res/layout/fragment_galeri.xml
+++ b/app/src/main/res/layout/fragment_galeri.xml
@@ -11,15 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/holo_red_dark"
-        android:visibility="gone" /> <!-- Initially hidden -->
+        android:visibility="gone" />
 
-    <!-- RecyclerView to display banner items -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="60dp"
+    <!-- ViewPager2 for the image slider -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
+        android:layout_height="200dp"
+        android:layout_marginTop="60dp"/>
 </LinearLayout>
