--- a/app/src/main/res/layout/fragment_galeri.xml
+++ b/app/src/main/res/layout/fragment_galeri.xml
@@ -16,7 +16,8 @@
     <!-- ViewPager2 for the image slider -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
+        android:layout_width="405dp"
         android:layout_height="200dp"
+        android:layout_marginLeft="11dp"
         android:layout_marginTop="60dp"/>
 </LinearLayout>
