--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -21,7 +21,7 @@
         android:icon="@drawable/baseline_video_library_24" />
 
     <item
-        android:id="@+id/Profile"
-        android:title="Profile"
-        android:icon="@drawable/baseline_account_circle_24" />
+        android:id="@+id/Disukai"
+        android:title="Favorit"
+        android:icon="@drawable/ic_icon4" />
 </menu>
