--- a/app/src/main/res/layout-sw600dp-land/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_login.xml
@@ -13,7 +13,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
+        android:layout_marginRight="400dp"
+        android:layout_marginLeft="400dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
         android:background="@drawable/custom_edittext">
@@ -95,7 +96,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="Not yet registered? Sign Up Now"
-        android:textSize="14sp"
+        android:textSize="20dp"
         android:textAlignment="center"
         android:id="@+id/signupRedirectText"
         android:textColor="@color/lavender"
