--- a/app/src/main/res/layout-sw600dp-land/fragment_galeri.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_galeri.xml
@@ -9,9 +9,10 @@
     <!-- ViewPager2 for the image slider -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        android:layout_width="410dp"
-        android:layout_height="150dp"
-        android:layout_marginLeft="9dp"
+        android:layout_width="match_parent"
+        android:layout_height="440dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="65dp"
         android:layout_above="@+id/dotIndicator"/>
 
@@ -31,6 +32,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
-        android:layout_marginLeft="155dp"
+        android:layout_marginLeft="520dp"
         android:padding="16dp" />
 </LinearLayout>
