--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -2,7 +2,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,7 +12,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
+        android:layout_marginRight="150dp"
+        android:layout_marginLeft="150dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
         android:background="@drawable/custom_edittext">
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="Login"
                 android:id="@+id/loginText"
-                android:textSize="36sp"
+                android:textSize="45sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="@color/lavender"/>
@@ -94,8 +94,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
+        android:layout_marginTop="50dp"
         android:text="Not yet registered? Sign Up Now"
-        android:textSize="14sp"
+        android:textSize="21dp"
         android:textAlignment="center"
         android:id="@+id/signupRedirectText"
         android:textColor="@color/lavender"
