--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">>
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/baseline_home_24"
-        android:title="Home" />
+    tools:showIn="navigation_view">
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/baseline_account_circle_24"
         android:title="Profile" />
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/baseline_settings_24"
-        android:title="Settings" />
-    <item
-        android:id="@+id/nav_about"
-        android:icon="@drawable/baseline_info_24"
-        android:title="About" />
+
     <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/baseline_exit_to_app_24"
