--- a/app/src/main/res/layout/fragment_disukai.xml
+++ b/app/src/main/res/layout/fragment_disukai.xml
@@ -13,6 +13,5 @@
         android:id="@+id/errorTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone" /> <!-- Make sure it's defined -->
-
+        android:visibility="gone" />
 </LinearLayout>
