--- a/app/src/main/res/layout/fragment_galeri.xml
+++ b/app/src/main/res/layout/fragment_galeri.xml
@@ -4,15 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:gravity="center"
     android:orientation="vertical">
 
     <!-- ViewPager2 for the image slider -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        android:layout_width="410dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginLeft="9dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginRight="9dp"
+        android:layout_marginTop="60dp"
         android:layout_above="@+id/dotIndicator"/>
 
     <!-- TextView for displaying error messages -->
@@ -26,11 +28,11 @@
 
     <LinearLayout
         android:id="@+id/dotIndicator"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:orientation="horizontal"
-        android:layout_marginLeft="155dp"
-        android:padding="16dp" />
+        android:padding="16dp"
+        android:gravity="center" />
+
 </LinearLayout>
