--- a/app/src/main/res/layout/fragment_koleksi.xml
+++ b/app/src/main/res/layout/fragment_koleksi.xml
@@ -15,6 +15,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
