--- a/app/src/main/res/menu/menu_popup.xml
+++ b/app/src/main/res/menu/menu_popup.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/baseline_account_circle_24"
         android:title="Profile" />
-
     <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/baseline_exit_to_app_24"
