konsistensi warna saat darkmode dan fix icon

--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="3dp"
-        android:color="@color/lavender"/>
+        android:color="#006BFF"/>
     <corners
         android:radius="20dp"/>
 </shape>
