--- a/app/src/main/res/layout/user_profile_card.xml
+++ b/app/src/main/res/layout/user_profile_card.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:background="@color/white"
+        android:outlineAmbientShadowColor="@color/black"
         android:padding="16dp">
 
         <ImageView
