--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:padding="24dp">
@@ -32,8 +33,8 @@
                 android:id="@+id/loginText"
                 android:textSize="36sp"
                 android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/lavender"/>
+                android:textStyle="italic"
+                android:textColor="#006BFF"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -42,9 +43,10 @@
                 android:background="@drawable/custom_edittext"
                 android:drawablePadding="8dp"
                 android:hint="Email"
+                android:textColorHint="@color/black"
                 android:padding="8dp"
                 android:textColor="@color/black"
-                android:drawableLeft="@drawable/baseline_email_24"
+                android:drawableLeft="@drawable/resized_email"
                 android:textColorHighlight="@color/cardview_dark_background"
                 android:layout_marginTop="40dp"/>
 
@@ -58,9 +60,10 @@
                     android:layout_height="50dp"
                     android:id="@+id/login_password"
                     android:background="@drawable/custom_edittext"
-                    android:drawableLeft="@drawable/baseline_lock_24"
+                    android:drawableLeft="@drawable/resized_lock"
                     android:drawablePadding="8dp"
                     android:hint="Password"
+                    android:textColorHint="@color/black"
                     android:padding="8dp"
                     android:inputType="textPassword"
                     android:textColor="@color/black"
@@ -82,9 +85,11 @@
                 android:layout_height="60dp"
                 android:id="@+id/login_button"
                 android:text="Login"
-                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="20dp"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/lavender"
+                android:backgroundTint="#006BFF"
                 app:cornerRadius="20dp"/>
         </LinearLayout>
 
@@ -93,12 +98,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Not yet registered? Sign Up Now"
+        android:text="Belum punya akun?"
         android:textSize="14sp"
         android:textAlignment="center"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ayo daftar sekarang!"
+        android:textSize="16sp"
+        android:textAlignment="center"
         android:id="@+id/signupRedirectText"
-        android:textColor="@color/lavender"
+        android:textColor="@color/black"
         android:layout_marginBottom="20dp"/>
 
 </LinearLayout>
