--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+            android:background="@color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <!-- Bottom Navigation View -->
@@ -38,6 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            app:itemIconTint="@color/black"
+            app:itemTextColor="@color/black"
             android:background="@color/white"
             app:menu="@menu/bottom_menu"/>
 
