--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_gravity="center_horizontal"
                 android:padding="24dp">
 
@@ -37,7 +38,7 @@
                     android:textSize="36sp"
                     android:textAlignment="center"
                     android:textStyle="bold"
-                    android:textColor="@color/lavender"/>
+                    android:textColor="#006BFF"/>
 
                 <!-- Profile Picture Upload -->
                 <LinearLayout
@@ -61,9 +62,10 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/selectProfilePicButton"
                         android:text="Upload Profile Picture"
+                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:layout_marginTop="10dp"
-                        android:backgroundTint="@color/lavender"
+                        android:backgroundTint="#006BFF"
                         app:cornerRadius="8dp"/>
                 </LinearLayout>
 
@@ -74,6 +76,8 @@
                     android:background="@drawable/custom_edittext"
                     android:drawablePadding="8dp"
                     android:hint="Nama Lengkap"
+                    android:drawableLeft="@drawable/resized_nama"
+                    android:textColorHint="@color/black"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/cardview_dark_background"
@@ -86,6 +90,8 @@
                     android:background="@drawable/custom_edittext"
                     android:drawablePadding="8dp"
                     android:hint="Nomor Induk"
+                    android:drawableLeft="@drawable/resized_id"
+                    android:textColorHint="@color/black"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/cardview_dark_background"
@@ -95,12 +101,8 @@
                     android:id="@+id/signupGender"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/custom_edittext"
-                    android:hint="Jenis Kelamin"
-                    android:drawablePadding="8dp"
+                    style="@style/SpinnerStyle"
                     android:padding="8dp"
-                    android:textColor="@color/black"
-                    android:textColorHighlight="@color/cardview_dark_background"
                     android:layout_marginTop="20dp"/>
 
                 <!-- Division Field -->
@@ -110,11 +112,13 @@
                     android:id="@+id/signupDivision"
                     android:background="@drawable/custom_edittext"
                     android:drawablePadding="8dp"
+                    android:textColorHint="@color/black"
                     android:hint="Divisi"
+                    android:drawableLeft="@drawable/resized_divisi"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/cardview_dark_background"
-                    android:layout_marginTop="20dp" />
+                    android:layout_marginTop="20dp"/>
 
                 <EditText
                     android:layout_width="match_parent"
@@ -123,9 +127,10 @@
                     android:background="@drawable/custom_edittext"
                     android:drawablePadding="8dp"
                     android:hint="Email"
+                    android:textColorHint="@color/black"
                     android:padding="8dp"
                     android:textColor="@color/black"
-                    android:drawableLeft="@drawable/baseline_email_24"
+                    android:drawableLeft="@drawable/resized_email"
                     android:textColorHighlight="@color/cardview_dark_background"
                     android:layout_marginTop="20dp"/>
 
@@ -139,9 +144,10 @@
                         android:layout_height="50dp"
                         android:id="@+id/signup_password"
                         android:background="@drawable/custom_edittext"
-                        android:drawableLeft="@drawable/baseline_lock_24"
+                        android:drawableLeft="@drawable/resized_lock"
                         android:drawablePadding="8dp"
                         android:hint="Password"
+                        android:textColorHint="@color/black"
                         android:padding="8dp"
                         android:inputType="textPassword"
                         android:textColor="@color/black"
@@ -168,9 +174,10 @@
                         android:layout_height="50dp"
                         android:id="@+id/signup_confirm"
                         android:background="@drawable/custom_edittext"
-                        android:drawableLeft="@drawable/baseline_lock_24"
+                        android:drawableLeft="@drawable/resized_lock"
                         android:drawablePadding="8dp"
                         android:hint="Konfirmasi Password"
+                        android:textColorHint="@color/black"
                         android:padding="8dp"
                         android:inputType="textPassword"
                         android:textColor="@color/black"
@@ -192,9 +199,11 @@
                     android:layout_height="60dp"
                     android:id="@+id/signup_button"
                     android:text="Signup"
-                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
                     android:layout_marginTop="30dp"
-                    android:backgroundTint="@color/lavender"
+                    android:backgroundTint="#006BFF"
                     app:cornerRadius="20dp"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -204,7 +213,8 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="Sudah Punya Akun? Login"
-            android:textSize="14sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:id="@+id/loginRedirectText"
             android:textColor="@color/lavender"
