--- a/app/src/main/res/layout/fragment_disukai.xml
+++ b/app/src/main/res/layout/fragment_disukai.xml
@@ -11,6 +11,7 @@
 
     <TextView
         android:id="@+id/errorTextView"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
