--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="shimmer_placeholder">#E0E0E0</color> <!-- Light gray color for shimmer effect -->
     <color name="lavender">#8692f7</color>
     <color name="black_transparent">#80000000</color>
     <color name="white_transparent_50">#80FFFFFF</color>
